# paddle

./: .gitignore  ChangeLog.md  LICENSE  README.md  ci.nix  default.nix  devenv.nix  package.yaml  paddle.cabal  stack.yaml
.github/workflows/: ci.yaml
src/Paddle/: Amount.hs  Client.hs  Env.hs  FieldModifier.hs  WebHook.hs
src/Paddle/Client/: CreateModifier.hs  CreateModifierResponse.hs  DeleteModifier.hs  GeneratePayLink.hs  GeneratePayLinkResponse.hs  ListModifier.hs  ListModifierResponse.hs  ListPayment.hs  ListPaymentResponse.hs  ListUsers.hs  ListUsersResponse.hs  SubscriptionUsersUpdate.hs  SubscriptionUsersUpdateResponse.hs
src/Paddle/WebHook/: Signature.hs  SubscriptionCancelled.hs  SubscriptionCreated.hs
src/Web/: Paddle.hs
test/: test_private.pem  test_public.pem
test/Paddle/WebHook/: SignatureSpec.hs
