cabal-version:  2.2
name:           paddle
version: 0.1.0.0
synopsis:       API to the Paddle payment processor
description:    Please see the README on GitHub at <https://github.com/cachix/paddle#readme>
category:       Web
homepage:       https://github.com/cachix/paddle#readme
bug-reports:    https://github.com/cachix/paddle/issues
author:         Patrick Chilton
maintainer:     chpatrick@gmail.com
copyright:      2019 Patrick Chilton and Benaco Ltd
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/benaco/paddle

library
  exposed-modules:
      Paddle.Amount
      Paddle.Client
      Paddle.Client.CreateModifier
      Paddle.Client.CreateModifierResponse
      Paddle.Client.DeleteModifier
      Paddle.Client.GeneratePayLink
      Paddle.Client.GeneratePayLinkResponse
      Paddle.Client.ListPayment
      Paddle.Client.ListPaymentResponse
      Paddle.Client.ListModifier
      Paddle.Client.ListModifierResponse
      Paddle.Client.ListUsers
      Paddle.Client.ListUsersResponse
      Paddle.Client.SubscriptionUsersUpdate
      Paddle.Client.SubscriptionUsersUpdateResponse
      Paddle.Env
      Paddle.FieldModifier
      Paddle.WebHook
      Paddle.WebHook.Signature
      Paddle.WebHook.SubscriptionCreated
      Paddle.WebHook.SubscriptionCancelled
  other-modules:
      Paths_paddle
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , asn1-encoding
    , asn1-types
    , base >=4.7 && <5
    , base64-bytestring
    , bytestring
    , containers
    , crypton
    , crypton-x509
    , http-api-data
    , http-client
    , memory
    , pem
    , protolude
    , scientific
    , servant
    , servant-client
    , servant-client-core
    , time
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    DeriveGeneric

test-suite paddle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paddle.WebHook.SignatureSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , hspec
    , paddle
    , process
    , protolude
    , text
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    DeriveGeneric
